@@ -22,7 +22,8 @@ coefplot(object,\dots)
                 v.axis=TRUE, h.axis=TRUE,
                 cex.var=0.8, cex.pts=0.9, 
                 col.pts=1, var.las=2,
-                main=NULL, xlab=NULL, ylab=NULL, mar=c(1,3,5.1,2),\dots)
+                main=NULL, xlab=NULL, ylab=NULL, mar=c(1,3,5.1,2),
+                plot=TRUE, \dots)
 \S4method{coefplot}{bugs}(object, var.idx=NULL, varnames=NULL, 
             CI=1, vertical=TRUE,
             v.axis=TRUE, h.axis=TRUE, 
@@ -63,6 +64,7 @@ coefplot(object,\dots)
   \item{mar}{A numerical vector of the form \code{c(bottom, left, top, right)}
           which gives the number of lines of margin to be specified on
           the four sides of the plot. The default is \code{c(1,3,5.1,2)}.}
+  \item{plot}{default is TRUE, plot the estimates.}
   \item{var.idx}{the index of the variables of a bugs object, default
         is NULL which will plot all the variables.}
   \item{intercept}{If TRUE will plot intercept, default=FALSE to get better presentation.}
